// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Basic should be disabled 1`] = `
<gro-select
  class="gro-disabled"
>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Basic should close options on click out 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  <div
    class="gro-options-wrapper ng-trigger ng-trigger-slideDownUp ng-animating"
    style="height:12rem;0:height;"
  >
    <gro-option>
      One
    </gro-option>
    <gro-option>
      Two
    </gro-option>
    <gro-option>
      Three
    </gro-option>
  </div>
  
</gro-select>
`;

exports[`Select Basic should create 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Basic should create with initial value 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      Two
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Basic should create with placeholder 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      Select
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Basic should not opened options panel on click if disabled 1`] = `
<gro-select
  class="gro-disabled"
>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Basic should open options on click 1`] = `
<gro-select
  class="gro-opened"
>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  <div
    class="gro-options-wrapper ng-trigger ng-trigger-slideDownUp ng-animating"
    style="height:12rem;0:height;"
  >
    <gro-option>
      One
    </gro-option>
    <gro-option>
      Two
    </gro-option>
    <gro-option>
      Three
    </gro-option>
  </div>
  
</gro-select>
`;

exports[`Select Basic when select option then check 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      One
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  <div
    class="gro-options-wrapper ng-trigger ng-trigger-slideDownUp ng-animating"
    style="height:12rem;0:height;"
  >
    <gro-option
      class="gro-selected"
    >
      One
    </gro-option>
    <gro-option>
      Two
    </gro-option>
    <gro-option>
      Three
    </gro-option>
  </div>
  
</gro-select>
`;

exports[`Select Complex value should create 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Complex value should create with initial value 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      Two
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Complex value when select option then check 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      One
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  <div
    class="gro-options-wrapper ng-trigger ng-trigger-slideDownUp ng-animating"
    style="height:12rem;0:height;"
  >
    <gro-option
      class="gro-selected"
      style=""
    >
      One
    </gro-option>
    <gro-option
      style=""
    >
      Two
    </gro-option>
    <gro-option
      style=""
    >
      Three
    </gro-option>
    
  </div>
  
</gro-select>
`;

exports[`Select Reactive should be disabled 1`] = `
<gro-select
  class="gro-disabled ng-untouched ng-pristine"
>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Reactive should create 1`] = `
<gro-select
  class="ng-untouched ng-pristine ng-valid"
>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Reactive should create with initial control value 1`] = `
<gro-select
  class="ng-untouched ng-pristine ng-valid"
>
  <div
    class="gro-select-wrapper"
  >
    <span>
      Three
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Reactive should update control value on option selection 1`] = `
<gro-select
  class="ng-valid ng-touched ng-dirty"
>
  <div
    class="gro-select-wrapper"
  >
    <span>
      One
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  <div
    class="gro-options-wrapper ng-trigger ng-trigger-slideDownUp ng-animating"
    style="height:12rem;0:height;"
  >
    <gro-option
      class="gro-selected"
    >
      One
    </gro-option>
    <gro-option>
      Two
    </gro-option>
    <gro-option>
      Three
    </gro-option>
  </div>
  
</gro-select>
`;
